# stryvo

./: .gitignore  Cargo.toml  Dockerfile  README.md  ci.sh  docker-compose.yml
source/stryvo/: Cargo.toml
source/stryvo/assets/: example-config.nginx  test-config.kdl  test-config.nginx  test-config.toml
source/stryvo/src/: files.rs  logging.rs  main.rs
source/stryvo/src/config/: cli.rs  internal.rs  mod.rs  nginx.rs  toml.rs
source/stryvo/src/config/kdl/: mod.rs  test.rs  utils.rs
source/stryvo/src/proxy/: compression.rs  header_utils.rs  mod.rs  pipeline.rs  request_filters.rs  request_modifiers.rs  request_selector.rs  response_modifiers.rs  service_registry.rs
source/stryvo/src/proxy/cache/: mod.rs  persistence.rs  service.rs
